Images on arweave

--- a/templates/index.html
+++ b/templates/index.html
@@ -201,12 +201,63 @@
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
           <div class="bg-white rounded shadow-sm">
             <a
-              href="https://medium.com/ai-in-plain-english/langchain-and-pinecone-unpack-crypto-news-with-openai-and-hugging-face-models-838c1e858bb6">
-              <img src="static/images/projects/langchain.webp" target="_blank" alt="" class="img-fluid card-img-top">
+              href="https://medium.com/coinmonks/how-i-built-a-web-application-to-draw-insights-from-articles-across-web3-publishing-platforms-674443132792?sk=d67b39ad321d5595201fa54886f02567">
+              <img src="https://arweave.net/m3_CRl4wVGQ5_tKnPwrX1Ebfxsj_U8Z-Q8CmT3aTBow" target="_blank" alt="" class="img-fluid card-img-top">
             </a>
             <div class="p-4">
-              <h5 class="title-img-gallery">Langchain and Pinecone for semantic search </h5>
-              <p class="small text-muted mb-0">Use Langchain and Pinecone to feed LLMs from Hugging Face and OpenAI. </p>
+              <h5 class="title-img-gallery">Web Application for Web3 Publishing </h5>
+              <p class="small text-muted mb-0">Harness the potential of web3 publishing platforms’ datasets through dashboards. </p>
+            </div>
+            <div class="project-category" style="background-color: rgba(19, 43, 98, 0.856); color: wheat">
+              <p>Web Development</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Gallery item -->
+        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+          <div class="bg-white rounded shadow-sm">
+            <a
+              href="https://medium.com/python-in-plain-english/create-stunning-dashboards-with-flask-and-plotly-dash-56a991dea04b?sk=dee420714967d3ac1bd4726179cd8361">
+              <img src="https://arweave.net/vmQbWKD81jzRSDf9T2WgcT4YZwTm5vCdVc_O4y71G80" target="_blank" alt="" class="img-fluid card-img-top">
+            </a>
+            <div class="p-4">
+              <h5 class="title-img-gallery">Stunning Dashboards with Flask and Plotly Dash </h5>
+              <p class="small text-muted mb-0">Upload datasets and return interactive dashboards using Python, HTML, and CSS. </p>
+            </div>
+            <div class="project-category" style="background-color: rgb(30, 172, 101); color: wheat">
+              <p>Data Visualization</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Gallery item -->
+        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+          <div class="bg-white rounded shadow-sm">
+            <a
+              href="https://medium.com/python-in-plain-english/3-ways-to-scrape-infinite-scroll-websites-with-python-66b38ed66016?sk=ed351515bb36235c30b3ee54dfd30225">
+              <img src="https://arweave.net/rSwSEseQzsUmPm5RmWci-Qcj_OmMDjDa4hdv2qp8xKI" target="_blank" alt="" class="img-fluid card-img-top">
+            </a>
+            <div class="p-4">
+              <h5 class="title-img-gallery">3 Ways to Scrape Infinite Scroll Websites with Python </h5>
+              <p class="small text-muted mb-0">Leverage the combination of Playwright scrolling functions and Beautiful Soup to deal with infinite scroll. </p>
+            </div>
+            <div class="project-category" style="background-color: rgb(30, 106, 172); color: wheat">
+              <p>Web Scraping</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Gallery item -->
+        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+          <div class="bg-white rounded shadow-sm">
+            <a
+              href="https://medium.com/python-in-plain-english/code-interpreter-is-it-really-a-time-saver-b866b73cc4a7?sk=362694076f0652f9d64c230e291f9986">
+              <img src="https://arweave.net/8xWLSdV3XC6Z5bjXWV9DzDfaBbWX0wsOcVqWvro5ksk" target="_blank" alt="" class="img-fluid card-img-top">
+            </a>
+            <div class="p-4">
+              <h5 class="title-img-gallery">Advanced Data Analysis: Is it really a time-saver? </h5>
+              <p class="small text-muted mb-0">An in-depth Exploratory Data Analysis using the GPT-4.</p>
             </div>
             <div class="project-category" style="background-color: rgba(136, 32, 192, 0.856); color: wheat">
               <p>Prompt Engineering</p>
@@ -217,120 +268,88 @@
         <!-- Gallery item -->
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
           <div class="bg-white rounded shadow-sm">
-            <a href="https://medium.com/datadriveninvestor/iot-on-the-move-how-connected-devices-are-preventing-transportation-risks-a9117333cd73">
-              <img src="static/images/projects/transportation.webp" target="_blank" alt="" class="img-fluid card-img-top">
+            <a
+              href="https://medium.com/python-in-plain-english/combine-playwright-with-beautiful-soup-to-scrape-websites-5fa077a55571?sk=2143f0efb8ff7ef89e4ddd40f30a41b3">
+              <img src="https://arweave.net/sjekcGsnp-86n7ziHxZjLuSjK94POilhXbUAmj2lSxU" target="_blank" alt="" class="img-fluid card-img-top">
             </a>
             <div class="p-4">
-              <h5 class="title-img-gallery">Transport Risk Mitigation with Machine Learning</h5>
-              <p class="small text-muted mb-0">EDA and ML models on to Prevent Transportation Risks with IoT data. </p>
+              <h5 class="title-img-gallery">Combine Playwright with Beautiful Soup to Scrape Websites </h5>
+              <p class="small text-muted mb-0">Web scrape data from JavaScript-rendered websites by using Python’s Playwright and Beautiful Soup libraries.</p>
             </div>
-            <div class="project-category" style="background-color: rgba(192, 32, 32, 0.856); color: wheat">
-              <p>Machine Learning</p>
+            <div class="project-category" style="background-color: rgb(30, 106, 172); color: wheat">
+              <p>Web Scraping</p>
             </div>
           </div>
         </div>
-
-        <!-- Gallery item -->
-        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-            <div class="bg-white rounded shadow-sm">
-                <a href="https://medium.com/@macrodrigues/global-trades-visualization-using-dash-plotly-and-flask-b528fcab1e5e">
-                  <img src="static/images/projects/global_trades.webp" target="_blank" alt="" class="img-fluid card-img-top">
-                </a>
-              <div class="p-4">
-                <h5 class="title-img-gallery">Analysing Global Trades with Dash Plotly and Flask</h5>
-                <p class="small text-muted mb-0">This project aims to analize and visualise global trades using Dash Plotly and Flask.</p>
-              </div>
-              <div class="project-category" style="background-color: rgb(30, 172, 101); color: wheat"">
-                <p>Data Visualization</p>
-              </div>
-            </div>
-          </div>
-          <!-- End -->
-
-        <!-- Gallery item -->
-        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-            <div class="bg-white rounded shadow-sm">
-                <a href="https://medium.com/@macrodrigues/build-an-app-to-detect-butterflies-with-tensorflow-and-kivy-772c6fd362b4">
-                  <img src="static/images/projects/butterflies_detector.webp" target="_blank" alt="" class="img-fluid card-img-top">
-                </a>
-              <div class="p-4">
-                <h5 class="title-img-gallery">Build an App to detect butterflies with TensorFlow and Kivy</h5>
-                <p class="small text-muted mb-0">Using CNN to detect 11 different species of southern mediterranean butterflies.</p>
-              </div>
-              <div class="project-category" style="background-color: rgb(0, 141, 207); color: wheat">
-                <p>Deep Learning</p>
-              </div>
-            </div>
-        </div>
-        <!-- End -->
 
         <!-- Gallery item -->
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
           <div class="bg-white rounded shadow-sm">
-            <a href="https://medium.com/@macrodrigues/dubai-real-estate-sales-forecasting-d765f61225d4">
-              <img src="static/images/projects/dubai.webp" target="_blank" alt="" class="img-fluid card-img-top">
+            <a
+              href="https://medium.com/ai-in-plain-english/langchain-and-pinecone-unpack-crypto-news-with-openai-and-hugging-face-models-838c1e858bb6?sk=b16d61740cd91adabdf9d4fb410c91d0">
+              <img src="https://arweave.net/9jfgesNA1a3tiIQXBi7ZVMlPTRaiahg6pgt5QI3yw-s" target="_blank" alt="" class="img-fluid card-img-top">
             </a>
             <div class="p-4">
-              <h5 class="title-img-gallery">Dubai Real Estate: Sales Forecasting</h5>
-              <p class="small text-muted mb-0">Reporting the steps to predict the sales transaction amounts of Dubai properties.
-              </p>
+              <h5 class="title-img-gallery">Langchain and Pinecone: Unpack Crypto News with OpenAI and Hugging Face Models</h5>
+              <p class="small text-muted mb-0">Use Langchain and Pinecone to feed LLMs from Hugging Face and OpenAI with cryptocurrency news.</p>
+            </div>
+            <div class="project-category" style="background-color: rgba(136, 32, 192, 0.856); color: wheat">
+              <p>Prompt Engineering</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Gallery item -->
+        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+          <div class="bg-white rounded shadow-sm">
+            <a
+              href="https://medium.com/datadriveninvestor/iot-on-the-move-how-connected-devices-are-preventing-transportation-risks-a9117333cd73">
+              <img src="https://arweave.net/wAqOpm_NOPPXU2rycsRPkerUWaYCPrT-L8AeDunJ3BI" target="_blank" alt="" class="img-fluid card-img-top">
+            </a>
+            <div class="p-4">
+              <h5 class="title-img-gallery">IoT on the Move: How Connected Devices are Preventing Transportation Risks</h5>
+              <p class="small text-muted mb-0">Transport Risk Mitigation through Exploratory Data Analysis and ML Models.</p>
             </div>
             <div class="project-category" style="background-color: rgba(192, 32, 32, 0.856); color: wheat">
               <p>Machine Learning</p>
             </div>
           </div>
         </div>
-        <!-- End -->
 
         <!-- Gallery item -->
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-            <div class="bg-white rounded shadow-sm">
-                <a href="https://medium.com/@macrodrigues/gather-data-by-creating-a-survey-app-with-flask-wtf-feb0053f7a74">
-                  <img src="static/images/projects/flask_forms.webp" target="_blank" alt="" class="img-fluid card-img-top">
-                </a>
-              <div class="p-4">
-                <h5 class="title-img-gallery">Gather data by creating a survey app with Flask-WTF</h5>
-                <p class="small text-muted mb-0">Flask and Flask-WTF, to build forms. Gather data with a custom form.</p>
-              </div>
-              <div class="project-category" style="background-color: rgba(19, 43, 98, 0.856); color: wheat">
-                <p>Web Development</p>
-              </div>
+          <div class="bg-white rounded shadow-sm">
+            <a
+              href="https://medium.com/python-in-plain-english/crypto-sentiment-analysis-a-closer-look-at-vader-13a69c3f9f9?sk=f06a392f1d21bcb705596beda120ff4c">
+              <img src="https://arweave.net/rYwwg_78VvvJvnMqrMyWLhhZbun8z_OMWIYZ3oQRD6s" target="_blank" alt="" class="img-fluid card-img-top">
+            </a>
+            <div class="p-4">
+              <h5 class="title-img-gallery">Crypto Sentiment Analysis: A Closer Look at VADER</h5>
+              <p class="small text-muted mb-0">Determine the sentiment of $OCEAN token tweets using a dedicated lexicon with VADER.</p>
+            </div>
+            <div class="project-category" style="background-color: rgba(192, 32, 32, 0.856); color: wheat">
+              <p>Machine Learning</p>
             </div>
           </div>
-          <!-- End -->
+        </div>
 
         <!-- Gallery item -->
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-            <div class="bg-white rounded shadow-sm">
-                <a href="https://github.com/macrodrigues/plantasia">
-                  <img src="static/images/projects/plantasia.webp" target="_blank" alt="" class="img-fluid card-img-top">
-                </a>
-              <div class="p-4">
-                <h5 class="title-img-gallery">GUI to be used as a repository for plants and mushrooms</h5>
-                <p class="small text-muted mb-0">Look for species, families and properties of muchrooms and plants.</p>
-              </div>
-              <div class="project-category" style="background-color: rgb(236, 173, 47); color: rgb(0, 0, 0)">
-                <p>GUI Development</p>
-              </div>
+          <div class="bg-white rounded shadow-sm">
+            <a
+              href="https://medium.com/python-in-plain-english/polars-and-pandas-the-race-continues-d89786f87087?sk=dc36f892fac598dba6d300dfad2e59ca">
+              <img src="https://arweave.net/FT6dtGe3TqWBfGo8jKlUwR5vZ0acEVjCp--7NYVgm0I" target="_blank" alt="" class="img-fluid card-img-top">
+            </a>
+            <div class="p-4">
+              <h5 class="title-img-gallery">Polars and Pandas: The Race Continues</h5>
+              <p class="small text-muted mb-0">7 examples comparing the execution time in Pandas and Polars.</p>
             </div>
+            <div class="project-category" style="background-color: rgba(32, 192, 144, 0.856); color: wheat">
+              <p>Data Manipulation</p>
+            </div>
+          </div>
         </div>
-        <!-- End -->
 
-        <!-- Gallery item -->
-        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-            <div class="bg-white rounded shadow-sm">
-                <a href="https://peakd.com/hive-163521/@macrodrigues/using-nlp-on-job-descriptions">
-                  <img src="static/images/projects/skills_matcher.webp" target="_blank" alt="" class="img-fluid card-img-top">
-                </a>
-              <div class="p-4">
-                <h5 class="title-img-gallery">Using NLP on Job Descriptions with a NER Model</h5>
-                <p class="small text-muted mb-0">NER model developed with Spacy to detect key words in job descriptions. </p>
-              </div>
-              <div class="project-category" style="background-color: rgb(0, 141, 207); color: wheat">
-                <p>Deep Learning</p>
-              </div>
-            </div>
-        </div>
         <!-- End -->
       </div>
       <div class="go-to-blogs">
@@ -351,8 +370,6 @@
       </div>
 <div>
 
-
-
 <!--Paid Work Section-->
 <div id="work" style="background-color: #121409;">
   <div class="other-header">
@@ -372,7 +389,7 @@
             <p class="small text-muted mb-0" style="color: #6e8923 !important;;">EDA and ML models on to Prevent Transportation Risks with IoT data. </p>
           </div>
           <div class="project-category" style="background-color: rgb(62, 75, 116); color: wheat">
-            <p>Reporting</p>
+            <p>Challenge</p>
           </div>
         </div>
       </div>
@@ -390,7 +407,7 @@
             </p>
           </div>
           <div class="project-category" style="background-color: rgb(62, 75, 116); color: wheat">
-            <p>Reporting</p>
+            <p>Challenge</p>
           </div>
         </div>
       </div>
