Images on arweave

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
             <h1 class="about-title">About</h1>
             <div class="about-text">
                 <p>
-                    With over 3 years of engineering experience, I can tag myself as a builder. With a Masters in Nanotechnology and
+                    With over 4 years of engineering experience, I can tag myself as a builder. With a Masters in Nanotechnology and
                     Microelectronics, it took me a few years to understand that the easiest and fastest way to build is with a simple
                     laptop. Now, I am a Software Engineer passionately dedicated to Data Science, AI, and Web3 technologies. The change was
                     progressive, early on, I was learning Python after my working hours, then the pandemic came, and I got more time to dive
@@ -274,7 +274,7 @@
             </a>
             <div class="p-4">
               <h5 class="title-img-gallery">Combine Playwright with Beautiful Soup to Scrape Websites </h5>
-              <p class="small text-muted mb-0">Web scrape data from JavaScript-rendered websites by using Python’s Playwright and Beautiful Soup libraries.</p>
+              <p class="small text-muted mb-0">Web scrape data from JavaScript-rendered websites by using Python.</p>
             </div>
             <div class="project-category" style="background-color: rgb(30, 106, 172); color: wheat">
               <p>Web Scraping</p>
@@ -290,8 +290,8 @@
               <img src="https://arweave.net/9jfgesNA1a3tiIQXBi7ZVMlPTRaiahg6pgt5QI3yw-s" target="_blank" alt="" class="img-fluid card-img-top">
             </a>
             <div class="p-4">
-              <h5 class="title-img-gallery">Langchain and Pinecone: Unpack Crypto News with OpenAI and Hugging Face Models</h5>
-              <p class="small text-muted mb-0">Use Langchain and Pinecone to feed LLMs from Hugging Face and OpenAI with cryptocurrency news.</p>
+              <h5 class="title-img-gallery">Langchain and Pinecone: Unpack Crypto News with OpenAI and Hugging Face</h5>
+              <p class="small text-muted mb-0">Use Langchain and Pinecone to feed LLMs from Hugging Face and OpenAI.</p>
             </div>
             <div class="project-category" style="background-color: rgba(136, 32, 192, 0.856); color: wheat">
               <p>Prompt Engineering</p>
@@ -309,23 +309,6 @@
             <div class="p-4">
               <h5 class="title-img-gallery">IoT on the Move: How Connected Devices are Preventing Transportation Risks</h5>
               <p class="small text-muted mb-0">Transport Risk Mitigation through Exploratory Data Analysis and ML Models.</p>
-            </div>
-            <div class="project-category" style="background-color: rgba(192, 32, 32, 0.856); color: wheat">
-              <p>Machine Learning</p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Gallery item -->
-        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-          <div class="bg-white rounded shadow-sm">
-            <a
-              href="https://medium.com/python-in-plain-english/crypto-sentiment-analysis-a-closer-look-at-vader-13a69c3f9f9?sk=f06a392f1d21bcb705596beda120ff4c">
-              <img src="https://arweave.net/rYwwg_78VvvJvnMqrMyWLhhZbun8z_OMWIYZ3oQRD6s" target="_blank" alt="" class="img-fluid card-img-top">
-            </a>
-            <div class="p-4">
-              <h5 class="title-img-gallery">Crypto Sentiment Analysis: A Closer Look at VADER</h5>
-              <p class="small text-muted mb-0">Determine the sentiment of $OCEAN token tweets using a dedicated lexicon with VADER.</p>
             </div>
             <div class="project-category" style="background-color: rgba(192, 32, 32, 0.856); color: wheat">
               <p>Machine Learning</p>
