remove phone number & add new articles

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,9 +17,6 @@
                 <a href="https://www.medium.com/@macrodrigues" target="_blank" class="nav-link">Blog</a>
             </li>
             <li class="nav-item">
-              <a href="https://mirror.xyz/macrodrigues.eth" target="_blank" class="nav-link">Web3</a>
-            </li>
-            <li class="nav-item">
                 <a href="#contact" class="nav-link">Contact</a>
             </li>
         </ul>
@@ -181,12 +178,6 @@
                 </div>
             </div>
         </div>
-        <!--preseach add-->
-        <div style="margin: auto; display:flex; justify-content: center;">
-          <a href="https://presearch.com/signup?rid=4739267" target="_blank">
-            <img src="https://assets.presearch.com/referral/ban-5.jpg" title="Presearch" alt="presearch" />
-          </a>
-        </div>
     </div>
 </div>
 <!--Projects Section-->
@@ -201,15 +192,15 @@
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
           <div class="bg-white rounded shadow-sm">
             <a
-              href="https://medium.com/coinmonks/how-i-built-a-web-application-to-draw-insights-from-articles-across-web3-publishing-platforms-674443132792?sk=d67b39ad321d5595201fa54886f02567">
-              <img src="https://arweave.net/m3_CRl4wVGQ5_tKnPwrX1Ebfxsj_U8Z-Q8CmT3aTBow" target="_blank" alt="" class="img-fluid card-img-top">
+              href="https://medium.com/coinmonks/post3-the-ultimate-web3-newsletter-ca5f426a60d0">
+              <img src="https://arweave.net/aNYIVVY9jex5wtH8QtA9uB5fmNTfpiW-CsXwsmzpZUc" target="_blank" alt="" class="img-fluid card-img-top">
             </a>
             <div class="p-4">
-              <h5 class="title-img-gallery">Web Application for Web3 Publishing </h5>
-              <p class="small text-muted mb-0">Harness the potential of web3 publishing platforms’ datasets through dashboards. </p>
+              <h5 class="title-img-gallery">Fully Automated Newsletter </h5>
+              <p class="small text-muted mb-0">A Web3 Newsletter and data platform to discover crypto content.</p>
             </div>
-            <div class="project-category" style="background-color: rgba(19, 43, 98, 0.856); color: wheat">
-              <p>Web Development</p>
+            <div class="project-category" style="background-color: rgba(180, 107, 5, 0.856); color: wheat">
+              <p>Automation</p>
             </div>
           </div>
         </div>
@@ -252,15 +243,15 @@
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
           <div class="bg-white rounded shadow-sm">
             <a
-              href="https://medium.com/python-in-plain-english/code-interpreter-is-it-really-a-time-saver-b866b73cc4a7?sk=362694076f0652f9d64c230e291f9986">
-              <img src="https://arweave.net/8xWLSdV3XC6Z5bjXWV9DzDfaBbWX0wsOcVqWvro5ksk" target="_blank" alt="" class="img-fluid card-img-top">
+              href="https://python.plainenglish.io/how-to-make-python-forms-as-a-pro-e4164f5ddcde?sk=4796504207589e681f655ac60c6fb540">
+              <img src="https://arweave.net/4MPRb7Mtphzr_vhFGaxYNY4B7gT4FAWQO2h7yzK5yeU" target="_blank" alt="" class="img-fluid card-img-top">
             </a>
             <div class="p-4">
-              <h5 class="title-img-gallery">Advanced Data Analysis: Is it really a time-saver? </h5>
-              <p class="small text-muted mb-0">An in-depth Exploratory Data Analysis using the GPT-4.</p>
+              <h5 class="title-img-gallery">Learn How to Make Advanced Python Forms</h5>
+              <p class="small text-muted mb-0">Use Flask-WTF and Jinja to build forms that can be used for the most diverse applications.</p>
             </div>
-            <div class="project-category" style="background-color: rgba(136, 32, 192, 0.856); color: wheat">
-              <p>Prompt Engineering</p>
+            <div class="project-category" style="background-color: rgba(0, 22, 111, 0.856); color: wheat">
+              <p>Web Development</p>
             </div>
           </div>
         </div>
@@ -339,14 +330,7 @@
         <div class="blog-label">
           <button class="btn btn-secondary btn-sm">
             <a href="https://medium.com/@macrodrigues" class="blog-label-link" target="_blank">
-              <p>More Projects</p>
-            </a>
-          </button>
-        </div>
-        <div class="blog-label">
-          <button class="btn btn-secondary btn-sm">
-            <a href="https://mirror.xyz/macrodrigues.eth" class="blog-label-link" target="_blank">
-              <p>Web3 Projects</p>
+              <p>Find More</p>
             </a>
           </button>
         </div>
@@ -480,12 +464,7 @@
             </div>
             <div class="contact-input" data-validate="Valid email is required: ex@abc.xyz">
                 <span class="contact-label-input">Email:</span>
-                    <input class="form-control" type="text" name="mail" placeholder="Enter email addess">
-                <span class="focus-input"></span>
-            </div>
-            <div class="contact-input" data-validate="Phone is required">
-                <span class="contact-label-input">Phone:</span>
-                    <input class="form-control" type="text" name="phone" placeholder="Enter phone number">
+                    <input class="form-control" type="text" name="mail" placeholder="Enter email address">
                 <span class="focus-input"></span>
             </div>
             <div class="contact-input" data-validate="Message is required">
