change contact form and add one more card

--- a/templates/index.html
+++ b/templates/index.html
@@ -192,6 +192,23 @@
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
           <div class="bg-white rounded shadow-sm">
             <a
+              href="https://medium.com/ai-advances/how-to-analyse-github-development-activity-with-python-ef00157ff46d?sk=38e6cf434e1657748bf64f479c19db5f">
+              <img src="https://arweave.net/nNRCNUejkpM-p_U_a47hNZ5oEasvgNtNo4tQ7PCIhmo" target="_blank" alt="" class="img-fluid card-img-top">
+            </a>
+            <div class="p-4">
+              <h5 class="title-img-gallery">How to Analyse GitHub Development Activity</h5>
+              <p class="small text-muted mb-0">Data manipulation techniques and data visualization to extract valuable insights from GitHub activity.</p>
+            </div>
+            <div class="project-category" style="background-color: rgba(32, 192, 144, 0.856); color: wheat">
+              <p>Data Analysis</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Gallery item -->
+        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+          <div class="bg-white rounded shadow-sm">
+            <a
               href="https://medium.com/coinmonks/post3-the-ultimate-web3-newsletter-ca5f426a60d0">
               <img src="https://arweave.net/aNYIVVY9jex5wtH8QtA9uB5fmNTfpiW-CsXwsmzpZUc" target="_blank" alt="" class="img-fluid card-img-top">
             </a>
@@ -303,23 +320,6 @@
             </div>
             <div class="project-category" style="background-color: rgba(192, 32, 32, 0.856); color: wheat">
               <p>Machine Learning</p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Gallery item -->
-        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-          <div class="bg-white rounded shadow-sm">
-            <a
-              href="https://medium.com/python-in-plain-english/polars-and-pandas-the-race-continues-d89786f87087?sk=dc36f892fac598dba6d300dfad2e59ca">
-              <img src="https://arweave.net/FT6dtGe3TqWBfGo8jKlUwR5vZ0acEVjCp--7NYVgm0I" target="_blank" alt="" class="img-fluid card-img-top">
-            </a>
-            <div class="p-4">
-              <h5 class="title-img-gallery">Polars and Pandas: The Race Continues</h5>
-              <p class="small text-muted mb-0">7 examples comparing the execution time in Pandas and Polars.</p>
-            </div>
-            <div class="project-category" style="background-color: rgba(32, 192, 144, 0.856); color: wheat">
-              <p>Data Manipulation</p>
             </div>
           </div>
         </div>
